--- a/src/output.css
+++ b/src/output.css
@@ -182,6 +182,9 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
+  .left-\[400px\] {
+    left: 400px;
+  }
   .left-\[440px\] {
     left: 440px;
   }
@@ -203,17 +206,32 @@
   .mt-\[12px\] {
     margin-top: 12px;
   }
+  .mt-\[30px\] {
+    margin-top: 30px;
+  }
   .mt-\[37px\] {
     margin-top: 37px;
   }
   .mt-\[40px\] {
     margin-top: 40px;
   }
+  .mt-\[48px\] {
+    margin-top: 48px;
+  }
+  .mt-\[50px\] {
+    margin-top: 50px;
+  }
   .mt-\[70px\] {
     margin-top: 70px;
   }
+  .mt-\[98px\] {
+    margin-top: 98px;
+  }
   .mt-\[100px\] {
     margin-top: 100px;
+  }
+  .mt-\[150px\] {
+    margin-top: 150px;
   }
   .mr-\[20px\] {
     margin-right: 20px;
@@ -227,11 +245,17 @@
   .hidden {
     display: none;
   }
+  .table {
+    display: table;
+  }
   .h-\[20px\] {
     height: 20px;
   }
   .h-\[25px\] {
     height: 25px;
+  }
+  .h-\[40px\] {
+    height: 40px;
   }
   .h-\[42px\] {
     height: 42px;
@@ -241,6 +265,9 @@
   }
   .h-\[57px\] {
     height: 57px;
+  }
+  .h-\[72px\] {
+    height: 72px;
   }
   .h-\[82px\] {
     height: 82px;
@@ -260,8 +287,14 @@
   .h-\[737px\] {
     height: 737px;
   }
+  .h-\[770px\] {
+    height: 770px;
+  }
   .h-\[805\] {
     height: 805;
+  }
+  .w-\[2\] {
+    width: 2;
   }
   .w-\[25px\] {
     width: 25px;
@@ -275,6 +308,9 @@
   .w-\[57px\] {
     width: 57px;
   }
+  .w-\[72px\] {
+    width: 72px;
+  }
   .w-\[82px\] {
     width: 82px;
   }
@@ -286,6 +322,12 @@
   }
   .w-\[200px\] {
     width: 200px;
+  }
+  .w-\[201px\] {
+    width: 201px;
+  }
+  .w-\[250px\] {
+    width: 250px;
   }
   .w-\[263px\] {
     width: 263px;
@@ -311,11 +353,20 @@
   .w-\[409px\] {
     width: 409px;
   }
+  .w-\[454\] {
+    width: 454;
+  }
+  .w-\[454px\] {
+    width: 454px;
+  }
   .w-\[490px\] {
     width: 490px;
   }
   .w-\[500px\] {
     width: 500px;
+  }
+  .w-\[510px\] {
+    width: 510px;
   }
   .w-\[526px\] {
     width: 526px;
@@ -323,8 +374,14 @@
   .w-\[1447px\] {
     width: 1447px;
   }
+  .border-collapse {
+    border-collapse: collapse;
+  }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
+  }
+  .resize {
+    resize: both;
   }
   .flex-wrap {
     flex-wrap: wrap;
@@ -343,6 +400,12 @@
   }
   .gap-\[60px\] {
     gap: 60px;
+  }
+  .gap-\[61px\] {
+    gap: 61px;
+  }
+  .gap-\[61pxx\] {
+    gap: 61pxx;
   }
   .gap-\[70px\] {
     gap: 70px;
@@ -369,6 +432,9 @@
   .bg-\[\#1E3C72\] {
     background-color: #1E3C72;
   }
+  .bg-\[\#1F3E76\] {
+    background-color: #1F3E76;
+  }
   .bg-white {
     background-color: var(--color-white);
   }
@@ -378,11 +444,17 @@
   .pt-\[10px\] {
     padding-top: 10px;
   }
+  .pt-\[15px\] {
+    padding-top: 15px;
+  }
   .pt-\[19px\] {
     padding-top: 19px;
   }
   .pt-\[20px\] {
     padding-top: 20px;
+  }
+  .pt-\[25px\] {
+    padding-top: 25px;
   }
   .pt-\[28px\] {
     padding-top: 28px;
@@ -396,8 +468,17 @@
   .pt-\[50px\] {
     padding-top: 50px;
   }
+  .pt-\[90px\] {
+    padding-top: 90px;
+  }
   .pt-\[110px\] {
     padding-top: 110px;
+  }
+  .pt-\[120px\] {
+    padding-top: 120px;
+  }
+  .pt-\[190px\] {
+    padding-top: 190px;
   }
   .pl-\[10px\] {
     padding-left: 10px;
@@ -407,6 +488,9 @@
   }
   .text-center {
     text-align: center;
+  }
+  .text-\[4px\] {
+    font-size: 4px;
   }
   .text-\[14px\] {
     font-size: 14px;
@@ -420,6 +504,9 @@
   .text-\[20px\] {
     font-size: 20px;
   }
+  .text-\[22px\] {
+    font-size: 22px;
+  }
   .text-\[25px\] {
     font-size: 25px;
   }
@@ -432,8 +519,17 @@
   .text-\[36px\] {
     font-size: 36px;
   }
+  .text-\[39px\] {
+    font-size: 39px;
+  }
   .text-\[40px\] {
     font-size: 40px;
+  }
+  .text-\[42px\] {
+    font-size: 42px;
+  }
+  .text-\[48px\] {
+    font-size: 48px;
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -449,15 +545,37 @@
   .text-\[\#343D48\] {
     color: #343D48;
   }
+  .text-\[\#02073E\] {
+    color: #02073E;
+  }
   .text-\[\#244886\] {
     color: #244886;
+  }
+  .text-\[3\] {
+    color: 3;
   }
   .text-white {
     color: var(--color-white);
   }
+  .line-through {
+    text-decoration-line: line-through;
+  }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .opacity-65 {
+    opacity: 65%;
+  }
+  .opacity-70 {
+    opacity: 70%;
+  }
   .shadow-md {
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
   }
   .xl\:top-\[200px\] {
     @media (width >= 1440px) {
@@ -467,6 +585,11 @@
   .xl\:left-\[810px\] {
     @media (width >= 1440px) {
       left: 810px;
+    }
+  }
+  .xl\:mt-\[0px\] {
+    @media (width >= 1440px) {
+      margin-top: 0px;
     }
   }
   .xl\:block {
@@ -497,6 +620,11 @@
   .xl\:w-\[150px\] {
     @media (width >= 1440px) {
       width: 150px;
+    }
+  }
+  .xl\:w-\[454px\] {
+    @media (width >= 1440px) {
+      width: 454px;
     }
   }
   .xl\:w-\[500px\] {
@@ -537,6 +665,16 @@
   .xl\:pt-\[80px\] {
     @media (width >= 1440px) {
       padding-top: 80px;
+    }
+  }
+  .xl\:pl-\[0px\] {
+    @media (width >= 1440px) {
+      padding-left: 0px;
+    }
+  }
+  .xl\:pl-\[20px\] {
+    @media (width >= 1440px) {
+      padding-left: 20px;
     }
   }
   .xl\:pl-\[90px\] {
@@ -654,6 +792,11 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -678,6 +821,7 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
     }
   }
 }
